syntax = "proto3";

import "google/api/annotations.proto";
//import "google/protobuf/wrappers.proto";
//import "google/protobuf/struct.proto";

option go_package = "pb/template_engine";

package template_engine;

service TestEngine {
  rpc Echo(StringMessage) returns (StringMessage) {
    option (google.api.http) = {
      post: "/echo"
      body: "*"
    };
  };
  rpc Hello(BasicMessage) returns (StringMessage) {
    option (google.api.http) = {
      get: "/hello"
    };
  }
  rpc TestByte(ByteMessage) returns (BasicMessage) {
    option (google.api.http) = {
      post: "/bytes"
      body: "*"
    };
  }
}

message BasicMessage{

}

message StringMessage {
  string msg = 1;
}

message ByteMessage {
  string name = 1;
  bytes data = 2;
}
